--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -12,10 +12,10 @@
 cv_pdf: /assets/pdf/CV.pdf # path to your CV PDF file
 # dblp_url: # your DBLP profile url
 # discord_id: # your discord id (18-digit unique numerical identifier)
-email: you@example.com # your email address
+email: nchandramouli@wpi.edu # your email address
 # facebook_id: # your facebook id
 # flickr_id: # your flickr id
-github_username: https://github.com/NishanthAdithya
+github_username: NishanthAdithya
 # gitlab_username: # your GitLab user name
 # hal_id: # your HAL id (https://hal.science/)
 # ieee_id: # your ieeexplore.ieee.org/author/id
@@ -26,7 +26,7 @@ github_username: https://github.com/NishanthAdithya
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: https://www.linkedin.com/in/nishanth-adithya-chandramouli-0245981ab/
+linkedin_username: nishanth-adithya-chandramouli-0245981ab/
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 # orcid_id: # your ORCID ID
